@@ -1,4 +1,6 @@
+#!/bin/sh
 aclocal
 autoconf
 automake -ac
-perl -p -i -e "s=\#include <xmlversion.h>=\#include <libxml/xmlversion.h>=g" configure
+
+#perl -p -i -e "s=\#include <xmlversion.h>=\#include <libxml/xmlversion.h>=g" configure
